[gd_scene load_steps=12 format=3 uid="uid://bjrox2llj64pm"]

[ext_resource type="Environment" uid="uid://drui1tvkk7b7q" path="res://example/Environment.tres" id="1_o40li"]
[ext_resource type="Script" path="res://example/Example.gd" id="2_hewa1"]
[ext_resource type="Material" uid="uid://n1tjl384bhl4" path="res://addons/tessarakkt.oceanfft/Ocean.tres" id="5_0jjw4"]
[ext_resource type="Script" path="res://addons/tessarakkt.oceanfft/components/BuoyancyBody3D.gd" id="5_7l8pd"]
[ext_resource type="Script" path="res://example/Camera.gd" id="5_eso43"]
[ext_resource type="Script" path="res://addons/tessarakkt.oceanfft/components/QuadTree3D.gd" id="5_li4kg"]
[ext_resource type="Script" path="res://addons/tessarakkt.oceanfft/components/BuoyancySphere3D.gd" id="6_0ba5x"]
[ext_resource type="Script" path="res://addons/tessarakkt.oceanfft/components/Ocean3D.gd" id="7_xa10r"]

[sub_resource type="BoxShape3D" id="BoxShape3D_s2ec8"]
size = Vector3(75, 15, 25)

[sub_resource type="BoxMesh" id="BoxMesh_diwhn"]
size = Vector3(75, 15, 25)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i8f6a"]
bg_color = Color(0.188235, 0.188235, 0.188235, 1)
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[node name="WorldEnvironment" type="WorldEnvironment"]
environment = ExtResource("1_o40li")
script = ExtResource("2_hewa1")

[node name="Ocean3D" type="Node3D" parent="."]
script = ExtResource("7_xa10r")
time_scale = 1.1
choppiness = 1.8
wave_speed = 0.003
wave_length = 9.0

[node name="QuadTree3D" type="Node3D" parent="." node_paths=PackedStringArray("camera")]
script = ExtResource("5_li4kg")
lod_level = 6
quad_size = 32768.0
ranges = Array[float]([500.0, 1900.0, 3800.0, 7600.0, 15200.0, 30400.0, 60800.0])
camera = NodePath("../Camera3D")
material = ExtResource("5_0jjw4")

[node name="BuoyancyBody3D" type="RigidBody3D" parent="."]
mass = 35000.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -5, 0)
linear_damp = 0.25
angular_damp = 0.25
script = ExtResource("5_7l8pd")
buoyancy_multiplier = 1.25001

[node name="CollisionShape3D" type="CollisionShape3D" parent="BuoyancyBody3D"]
shape = SubResource("BoxShape3D_s2ec8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BuoyancyBody3D"]
mesh = SubResource("BoxMesh_diwhn")
skeleton = NodePath("../..")

[node name="BuoyancySpheres" type="Node3D" parent="BuoyancyBody3D"]

[node name="BuoyancySphere3D" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35, -7, -10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D2" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35, -7, 10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D3" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17, -7, -10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D4" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17, -7, 10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D5" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7, -10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D6" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7, 10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D7" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, -7, -10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D8" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, -7, 10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D9" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35, -7, -10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D10" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35, -7, 10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D11" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 0, -10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D12" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 0, 10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D13" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 0, -10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D14" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 0, 10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D15" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D16" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D17" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, -10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D18" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, 10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D19" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 0, -10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="BuoyancySphere3D20" type="Marker3D" parent="BuoyancyBody3D/BuoyancySpheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 0, 10)
gizmo_extents = 2.0
script = ExtResource("6_0ba5x")
radius = 2.5

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 24, 0)
near = 1.0
far = 16000.0
script = ExtResource("5_eso43")
speed = 100.0
sprint_speed = 500.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.906308, 0.178606, -0.383022, 0, 0.906308, 0.422618, 0.422618, 0.383022, -0.821394, 0, 2.5, 0)
rotation_edit_mode = 2
light_energy = 0.5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Displacement_cascade0" type="TextureRect" parent="CanvasLayer"]
custom_minimum_size = Vector2(256, 256)
offset_right = 40.0
offset_bottom = 40.0

[node name="Displacement_cascade1" type="TextureRect" parent="CanvasLayer"]
custom_minimum_size = Vector2(256, 256)
offset_left = 288.0
offset_right = 544.0
offset_bottom = 256.0

[node name="Displacement_cascade2" type="TextureRect" parent="CanvasLayer"]
custom_minimum_size = Vector2(256, 256)
offset_left = 576.0
offset_right = 832.0
offset_bottom = 256.0

[node name="FPS" type="Label" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(256, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -136.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 166.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_i8f6a")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="SimulateEnabled" type="CheckButton" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Simulate"

[node name="CullEnabled" type="CheckButton" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "LOD Cull Enabled"

[node name="FrameskipLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Frameskip"

[node name="Frameskip" type="SpinBox" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "You probably don't want to use more than 5 here. If running <20fps, any value will start to be noticable."
max_value = 30.0

[node name="PlanetaryCurveLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Planetary Curve"

[node name="PlanetaryCurve" type="HSlider" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = -1.0
value = 0.001

[node name="SpeedLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Time Scale"

[node name="Speed" type="HSlider" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.05
max_value = 5.0
step = 0.05
value = 0.75

[node name="ChopLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Choppiness"

[node name="Choppiness" type="HSlider" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1
value = 1.8

[node name="WaveLengthLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Wave Length"

[node name="WaveLength" type="HSlider" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
min_value = 5.0
max_value = 500.0
value = 9.0

[node name="WaveSpeedLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Wave Speed"

[node name="WaveSpeed" type="HSlider" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="WindDirectionLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Wind Direction"

[node name="WindDirection" type="HSlider" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Tick marks represent, in order, North (000), East (090), South (180), and West (270)."
max_value = 360.0
step = 0.001
tick_count = 4
ticks_on_borders = true

[connection signal="toggled" from="CanvasLayer/PanelContainer/VBoxContainer/SimulateEnabled" to="." method="_on_simulate_enabled_toggled"]
[connection signal="toggled" from="CanvasLayer/PanelContainer/VBoxContainer/CullEnabled" to="." method="_on_cull_enabled_toggled"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/Frameskip" to="." method="_on_frameskip_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/PlanetaryCurve" to="." method="_on_planetary_curve_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/Speed" to="." method="_on_speed_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/Choppiness" to="." method="_on_choppiness_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/WaveLength" to="." method="_on_wind_speed_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/WaveSpeed" to="." method="_on_wave_speed_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/WindDirection" to="." method="_on_wind_direction_value_changed"]
